# web-template

./: Cargo.toml  config.toml
src/: config.rs  main.rs
src/actors/: fetcher.rs  id_gen.rs  mod.rs  rbac.rs
src/database/: errors.rs  mod.rs  mongodb.rs
src/database/repositories/: base.rs  collection_names.rs  macros.rs  mod.rs  role.rs  user.rs
src/domain/: base.rs  common.rs  errors.rs  mod.rs  role.rs  user.rs
src/handles/: errors.rs  middlewares.rs  mod.rs  response.rs  routes.rs
src/handles/login/: login_handles.rs  mod.rs  types.rs
src/jwt/: mod.rs
